Tristan's Admin page mostly working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".AdminTristan"
+            android:screenOrientation="landscape"/>
+
+        <activity android:name=".AdminJohn"
+            android:screenOrientation="landscape"/>
+
 
     </application>
 
