Single Item thing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".AdminJohn"
             android:screenOrientation="landscape"/>
 
+        <activity android:name=".ItemInfo"
+            android:screenOrientation="landscape"/>
 
     </application>
 
